# Void-YT

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  release.yml
licenses/: quickjs-ng.txt
scripts/: format-menu.js  install-ffmpeg.ps1  install-ffmpeg.sh  install.ps1  install.sh  package.ps1  package.sh  update.ps1  update.sh
src/: deps.c  deps.h  ffmpeg.c  ffmpeg.h  interactive.c  interactive.h  main.c  process.c  subprocess.h  update.c  update.h
tests/: installer_stamping_test.cmake  interactive_single_video_test.cmake  process_capture_test.c  version_test.c
tests/fixtures/: formats.json
